[package]
name = "bento-ghost-replay"
version = "0.1.0"
authors = ["Danyang Zhuo <danyangz@cs.washington.edu>",
           "Kaiyuan Zhang <kaiyuanz@cs.washington.edu>",
           "Samantha Miller <sm237@cs.washington.edu>"]

[features]
replay = []

[dependencies]
scheduler_utils = {path = "../../../bento/scheduler_utils" }
rlibc = "1.0"
hash32 = "0.1.1"
spin = { version = "0.9.4", features = ["rwlock"] }
postcard = "1.0.0"

serde = { version = "1.0.*", default-features = false, features = ["derive"] }
