[package]
name = "enoki-shinjuku-record"
version = "0.1.0"
authors = ["Danyang Zhuo <danyangz@cs.washington.edu>",
           "Kaiyuan Zhang <kaiyuanz@cs.washington.edu>",
           "Samantha Miller <sm237@cs.washington.edu>"]

[features]
default = []

[dependencies]
rlibc = "1.0"
memmap = "0.7.0"
nix = {version = "0.25.0", features = ["ioctl"]}
